# const_closure

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml  rust_release.yml
src/: closure_type.rs  lib.rs  test.rs  tests.rs
