[package]
name = "const_closure"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "onestacked <chrisi.schrefl@gmail.com>",
    "raldone01 <raldone01@gmail.com>",
]
description = "Helpers for creating const callable closures."
homepage = "https://github.com/ink-feather-org/const_closure"
repository = "https://github.com/ink-feather-org/const_closure"
categories = ["no-std"]
keywords = ["const", "closures", "nightly"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
