[package]
name = "const_closure"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "onestacked <chrisi.schrefl@gmail.com>",
    "raldone01 <raldone01@gmail.com>",
]
description = "Helpers for creating const callable closures."
homepage = "https://github.com/ink-feather-org/const_closure_rs"
repository = "https://github.com/ink-feather-org/const_closure_rs"
categories = ["no-std"]
keywords = ["const", "closures", "nightly"]
